# libatbus-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  README.md
docs/: mkdocs.yml  requirements.txt
docs/src/: discovery.md  index.md
docs/src/design/: index.md  kubernetes.md  lockstep.md
docs/src/developer/: cargo-configure.md
docs/src/protocol/: libatbus-rs.md  libatbus.md  reference.md
src/binding/c/: Cargo.toml
src/connection/: README.md
src/endpoint/: Cargo.toml
src/endpoint/src/: config.rs  endpoint.rs  lib.rs  stream.rs
src/ffi/: Cargo.toml  build.rs
src/ffi/c/: cbindgen.toml
src/ffi/src/: common.rs  lib.rs  protocol.rs
src/node/: Cargo.toml
src/protocol/: .clang-format  Cargo.toml  build.rs
src/protocol/benches/: encoder.rs  main.rs  stream_message.rs  utility.rs
src/protocol/proto/: libatbus_options.proto  libatbus_protocol.proto
src/protocol/src/: decoder.rs  encoder.rs  error.rs  frame_block.rs  lib.rs  stream_message.rs
src/protocol/src/proto/: atbus.protocol.rs  libatbus_options.rs  libatbus_protocol.rs  mod.rs
src/protocol/tests/: main.rs
src/utility/: Cargo.toml
src/utility-dev/: Cargo.toml
src/utility-dev/src/: lib.rs
src/utility-dev/src/benchmark/: benchmark_flamegraph.rs  benchmark_normal.rs  mod.rs
src/utility/src/: lib.rs  unique_id.rs
tools/protoc-bin/: Cargo.toml
tools/protoc-bin/src/: lib.rs
