[package]
name = "libatbus-endpoint"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libatbus-protocol = { path = "../protocol" }
libatbus-utility = { path = "../utility" }

bytes = { version = "1" }

[dev-dependencies]
rand = "0.*"
