[package]
name = "libatbus-ffi"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cbindgen = []

# [target.'cfg(any(target_os = "macos", target_arch = "ios"))']
# rustflags = "-C target-feature=+crt-static"

[lib]
name = "libatbus_rs_ffi"

# [target.'cfg(not(target_feature = "crt-static"))'.lib]
crate-type = ["lib", "cdylib"]

# [target.'cfg(target_feature = "crt-static")'.lib]
# crate-type = ["lib", "staticlib"]

[dependencies]
libc = "0.*"
bitflags = "2"
prost = { version = "0.*" }
prost-types = { version = "0.*" }
bytes = { version = "1" }
libatbus-protocol = { path = "../protocol" }


[build-dependencies]
bitflags = "2"
cbindgen = "0.*"
