[package]
name = "libatbus-protocol"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
license = "MIT OR Apache-2.0"
description = "Protocols of libatbus-rs"
homepage = "https://github.com/atframework"
repository = "https://github.com/atframework/libatbus-rs"
documentation = "https://github.com/atframework"
keywords = ["libatbus", "network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

autobenches = false # It's nightly now

[lib]
#proc-macro = true
bench = false  # It's nightly now
harness = true

[dependencies]
# syn = { version = "1" }
# quote = { version = "1" }
# once_cell = "1"
prost = { version = "0.*" }
prost-types = { version = "0.*" }
bytes = { version = "1" }
murmur3 = "0.*"
rand = "0.*"
libatbus-utility = { path = "../utility" }

[build-dependencies]
libatbus-protoc-bin = { path = "../../tools/protoc-bin" }
prost-build = { version = "0.*" }
