[package]
name = "libatbus-utility-dev"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
criterion = { version = "0.*", features = ["html_reports"] }

[target.'cfg(target_family = "unix")'.dependencies]
pprof = { version = "0.*", features = ["flamegraph"] }
