[package]
name = "libatbus-utility"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "1" }
bytes = { version = "1" }
uuid = { version = "1", features = ["v4", "fast-rng"] }
once_cell = "1"
# libatbus-protocol = { path = "protocol" }

[dev-dependencies]
criterion = { version = "0.*", features = ["html_reports"] }
