[package]
name = "libatbus-protoc-bin"
version = "0.1.0"
authors = ["owent <admin@owent.net>"]
license = "MIT OR Apache-2.0"
description = "Protocols of libatbus-rs"
homepage = "https://github.com/atframework"
repository = "https://github.com/atframework/libatbus-rs"
documentation = "https://github.com/atframework"
keywords = ["libatbus", "network"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

autobenches = false # It's nightly now

[lib]
#proc-macro = true
bench = false  # It's nightly now
harness = true

[dependencies]
log = "0.*"
env_logger = "0.*"
reqwest = { version = "0.*", features = ["blocking"] }
prost-build = { version = "0.*" }
zip = { version = "0.*" }


[target.'cfg(not(any(windows, macos)))'.dependencies]
hyper-tls = { version = "0.*", features = ["vendored"] }
